fix - letter spacing on mobile

--- a/src/components/Game/Wheel.css
+++ b/src/components/Game/Wheel.css
@@ -141,6 +141,6 @@
   }
 
   .ui-wheel-of-fortune li .text-wrapper {
-    letter-spacing: -0.45px;
+    letter-spacing: -0.65px;
   }
 }
